--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
             the song "How Could You Leave Us" to her. He graduated from Gladwin High School in 2009, and was on the basketball team. 
             NF started his career by going to "Fine Arts Festival" with Connection Church in Canton, Michigan.</p>
     </div>
-    <h2 class="spotify">NF's Spotify Playlist</h2>
+    <h2 class="spotify"><a class="spotify" href="https://open.spotify.com/artist/6fOMl44jA4Sp5b9PpYCkzz" target="_blank" >NF's Music</a></h2>
 </body>
 </html>
